--- a/views/layout/home/top_clients.ejs
+++ b/views/layout/home/top_clients.ejs
@@ -1,4 +1,4 @@
-<div id="our_clients">
+<!-- <div id="our_clients">
 
   <p class="text-banner mobile-infinite-z our_work_title font-50 margin-top-10 float-right margin-right-5 padding-right-5 text-center width-25 mobile-width-60 mobile-float-left our_clients_title mobile-font-35 mobile-width-70 mobile-relative mobile-max-z mobile-margin-right-35 mobile-padding-left-2_5">Our Top Clients </p>
 
@@ -10,4 +10,4 @@
     <img src = "./assets/images/pj.png" class="work_grid_item_rightest work_grid_item width-100" />
   </div>
 
-</div>
+</div> -->
