--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -1,4 +1,4 @@
-<div class="white-background padding-top-5 paddding-bottom-20 padding-left-5 padding-right-5">
+<div class="white-background padding-top-5 paddding-bottom-20 padding-left-5 padding-right-5 width-100">
   <p class="text-banner  text-left width-30 font-30 mobile-font-30 mobile-width-80 mobile-text-center " style="font-size:40px"> Our Top Clients </p>
 
 <div class="row padding-2 padding-bottom-5">
