--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -1,10 +1,10 @@
-<div class="white-background padding-top-5 paddding-bottom-20 padding-left-5 padding-right-5 width-100 ">
+<div class="white-background padding-5 padding-bottom-10 width-100 ">
   <p class="text-banner  text-left width-30 font-30 mobile-font-30 mobile-width-80 mobile-text-center " style="font-size:40px"> Our Top Clients </p>
 
-<div class="row padding-2 padding-bottom-5">
+<div class="row padding-2 padding-bottom-5 width-90 padding-left-5">
   <% for(var i = 0; i < clients.length; i++){ %>
-      <div class="col-3 mobile-col-6 margin-top-2_5" style='padding:0%;'>
-    <div class="margin-left-5  margin-top-2_5 relative client_card card padding-bottom-20 mobile-padding-bottom-5 heavy-shadow padding-2 mobile-width-110" >
+      <div class="col-3 mobile-col-6 margin-top-2_5" style='padding:2%;'>
+    <div class="margin-left-10  margin-top-2_5 relative client_card card padding-bottom-20 mobile-padding-bottom-5 heavy-shadow padding-2 margin-left-5" >
         <div style="height:300px" class="mobile-height-175px">
         <% if(clients[i].small == false) {%>
         <img class="width-100 padding-10 padding-top-5 margin-top-5-neg  "src = "<%= './assets/images/' + clients[i].logo%>"/>
