--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -3,7 +3,7 @@
 
 <div class="row padding-2 padding-bottom-5 width-90 padding-left-5">
   <% for(var i = 0; i < clients.length; i++){ %>
-      <div class="col-3 mobile-col-6 margin-top-2_5" style='padding:2%;'>
+      <div class="col-3 mobile-col-6 margin-top-2_5" >
     <div class="margin-left-10  margin-top-2_5 relative client_card card padding-bottom-20 mobile-padding-bottom-5 heavy-shadow padding-2 margin-left-5" >
         <div style="height:300px" class="mobile-height-150px">
         <% if(clients[i].small == false) {%>
