--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -14,7 +14,7 @@
       </div>
 
       <%- include("./../layout/contact/meet_the_owners.ejs") %>
-      <div style="padding:5%;background:white"class="mobile-width-110">
+      <div style="padding:5%;background:white;padding-right:10%">
         <%- include("./../layout/out_clients.ejs") %>
       </div>
 
