--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -112,7 +112,7 @@
   visibility: visible;
   animation: .5s ease-in dropdown 1;
 }
-.contact_info{
+.contact_info_section{
   padding-top: 10%;
     margin-top: -2.5%;
 }
