--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -28,7 +28,7 @@
                 <div class = "wave relative width-100 background-006 max-z"></div>
             </div>
 
-        <div class="mobile-margin-top-20-neg padding-bottom-5 white-background">
+        <div class="mobile-margin-top-20-neg padding-bottom-5 white-background"style="padding-left:0%">
           <%- include("./../layout/out_clients.ejs") %>
         </div>
       </div>
