--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -1,6 +1,10 @@
 <div class="white-background padding-5 padding-bottom-10 width-100 ">
-  <p class="text-banner text-center width-30 font-30 mobile-font-30 mobile-width-80 mobile-text-center " style="font-size:40px"> Our Top Clients </p>
-
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col-6">
+      <p class="text-banner text-center width-100 font-30 mobile-font-30 mobile-text-center " style="font-size:40px"> Our Top Clients </p>
+    </div>
+      </div>
 <div class="row padding-2 padding-bottom-5 width-90 padding-left-5">
   <% for(var i = 0; i < clients.length; i++){ %>
       <div class="col-3 mobile-col-6 margin-top-2_5" >
