--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1080,10 +1080,15 @@ cursor: auto;
     flex:  0 0 95%;
     margin-left:2.5%;
   }
-  .mobile-col-10{
+  .mobile-col-0{
     max-width: 83.33333333333333% !important;
     width:83.33333333333333% !important;
     flex:  0 0 83.3333333333333333%;
+  }
+  .mobile-col-10{
+    max-width: 0% !important;
+    width:0% !important;
+    flex:  0 0 0%;
   }
   .mobile-col-1{
     max-width: .0833333333333333% !important;
