--- a/views/layout/contact/meet_the_owners.ejs
+++ b/views/layout/contact/meet_the_owners.ejs
@@ -7,12 +7,12 @@
         <div class='row'>
 
             <div class="col-6 mobile-col-12">
-              <img class ="width-100" src = "./assets/images/me.png" />
+              <img class ="width-100" src = "./assets/images/1.png" />
               <p class="owner_name akrobat font-30 white text-center">Marco Khodr </p>
             </div>
 
             <div class="col-6 mobile-col-12">
-              <img class ="width-100" src = "./assets/images/you.png" />
+              <img class ="width-100" src = "./assets/images/2.png" />
               <p class="owner_name akrobat font-30 white text-center ">Tommy Tejada </p>
             </div>
 
