--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -1,5 +1,5 @@
 <div class="white-background padding-5 padding-bottom-10 width-100 ">
-  <div class="row width-90 padding-left-5">
+  <div class="row width-90 padding-2 padding-left-5">
     <div class="col-3 mobile-col-0"></div>
     <div class="col-6 mobile-col-12">
       <p class="text-banner text-center width-100 font-30 mobile-font-30 mobile-text-center " style="font-size:40px"> Our Top Clients </p>
