--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -8,5 +8,16 @@
   .meet_owners_container{
     margin-top:140% !important;
   }
+  .mobile_text_banner_out_clients{
+    left: -15%;
+    text-align:center !important;
+    width:130% !important;
+    font-size: 40px;
+    position: absolute;
+  }
+  .contact_us_con{
+    padding-top:25%;
+  }
+
 
 }
