--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -11,9 +11,9 @@
     <div class="margin-left-10  margin-top-2_5 relative client_card card padding-bottom-20 mobile-padding-bottom-5 heavy-shadow padding-2" >
         <div style="height:300px" class="mobile-height-125px">
         <% if(clients[i].small == false) {%>
-          <img class="width-100 padding-10 padding-top-5 margin-top-5-neg  "src = "<%= './assets/images/' + clients[i].logo %>"/>
+          <img class="width-100 padding-5  margin-top-5-neg  "src = "<%= './assets/images/' + clients[i].logo %>"/>
         <%}else{%>
-          <img class="width-100 padding-10 margin-top-10  mobile-margin-top-2-neg "  src = "<%= './assets/images/' + clients[i].logo %>"/>
+          <img class="width-100 padding-5 mobile-margin-top-2-neg "  src = "<%= './assets/images/' + clients[i].logo %>"/>
 
 
           <%}%>
