--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -1,4 +1,4 @@
-<div class="white-background padding-5 padding-bottom-10 width-100">
+<div class="white-background padding-5 padding-bottom-10 width-100 padding-bottom-10">
   <div class="row width-90 padding-2 padding-left-5">
     <div class="col-3 mobile-col-0"></div>
     <div class="col-6 mobile-col-12">
