--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -9,14 +9,14 @@
     margin-top:140% !important;
   }
   .mobile_text_banner_out_clients{
-    left: -18.5%;
+    left: -21%;
     text-align:center !important;
-    width:140% !important;
+    width:145% !important;
     font-size: 40px;
     position: absolute;
   }
   .contact_us_con{
-    padding-top:35%;
+    padding-top:30% !important;
   }
 
 
