--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -24,6 +24,9 @@
 .what_we_do_container{
   height:700px !important;
 }
+.about_description{
+  padding-top:1% !important;
+}
   .text-container{
     height:500px !important;
   }
