--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -25,7 +25,7 @@
   height:700px !important;
 }
 .about_description{
-  padding-top:1% !important;
+  margin-top:-2% !important;
 }
   .text-container{
     height:500px !important;
