--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -220,6 +220,9 @@
   .client_row{
     padding-left:10% !important;
   }
+  .mobile_text_banner_out_clients{
+    font-size:45px !important;
+  }
 
 
 
