--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -39,7 +39,7 @@
       </div>
 
       <div class="contact_info_section padding-top-3-rem color-01 line-height-1_5 white-background width-100 background-white relative width-100">
-          <p class="text-banner width-50 mobile-width-80 text-left mobile-font-25">489-939-9393 </p>
+          <p class="text-banner margin-top-5 mobile-margin-top-5-neg width-50 mobile-width-80 text-left mobile-font-25">489-939-9393 </p>
           <p class="text-banner text-left width-80 mobile-width-90 mobile-font-20">info@customfacilityservices.com </p>
           <%- include("./../layout/home/contact.ejs") %>
       </div>
