--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -1,5 +1,5 @@
 <div class="white-background padding-5 padding-bottom-10 width-100 padding-bottom-10">
-  <div class="row  width-50 p_row "style="position:absolute;left:0%;">
+  <div class="row  width-50 p_row absolute">
     <div class="mobile-col-0"></div>
     <div class="col-12 mobile-col-12">
       <p class="mobile_text_banner_out_clients text-banner text-center width-100 font-30 mobile-font-30 " style="font-size:40px"> Our Top Clients </p>
