--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -1,7 +1,7 @@
-<div class="margin-top-5 padding-bottom-5">
+<div class="margin-top-2_5 padding-bottom-5">
   <p class="before_after_title text-banner mobile-width-80">Our Work </p>
 
-  <div class="row margin-top-10">
+  <div class="row margin-top-5">
       <div class="col-1 no-col"></div>
       <div class="col-10 mobile-col-11">
         <div class="row">
@@ -9,7 +9,7 @@
              <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5">Before </p>
           </div>
           <div class='col-6 dark-navy-background'>
-            <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5">After </p>
+            <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 ">After </p>
           </div>
         </div>
       </div>
@@ -23,10 +23,10 @@
           <% for(let images of before_and_after_images) { %>
             <div class="row">
 
-                <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 darker-navy-background padding-5">
+                <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 darker-navy-background padding-5 x_before_box">
                     <img class=" width-100 height-100 relative" src ="<%= images.before %>" />
                 </div>
-                <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 dark-navy-background padding-5" >
+                <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 dark-navy-background padding-5 x_after_box" >
                     <img class=" width-100 height-100" src ="<%= images.after %>"  />
                 </div>
             </div>
