--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -12,7 +12,8 @@
 }
 .x_before_box{
 
-  border-bottom:2px solid #01488;
+  border-bottom:2px solid rgb(1, 72, 132);
+}
 }
 .x_after_box{
   border-bottom:2px solid #002F57;
