--- a/views/layout/home/about.ejs
+++ b/views/layout/home/about.ejs
@@ -35,7 +35,7 @@
         <% } %>
 
         <div class="text-about-us-box_4 margin-top-10 padding-1 padding-top-5 width-90 margin-left-5 padding-left-5 light-navy-shadow margin-top-1 background-00 ">
-            <p class="about-us-text_about_link  akrobat text-center akrobat font-35 light-font white white mobile-font-30">Learn More About Us!</p>
+            <p class="about-us-text_about_link  padding-top-5 akrobat text-center akrobat font-35 light-font white white mobile-font-30">Learn More About Us!</p>
         </div>
 
     </div>
