--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -5,7 +5,7 @@
       <p class="mobile_text_banner_out_clients text-banner text-center width-100 font-30 mobile-font-30 " style="font-size:40px"> Our Top Clients </p>
     </div>
       </div>
-<div class="row padding-2 margin-top-7_5 padding-bottom-5 width-90 padding-left-5 mobile-padding-top-15 contact_us_con client_row ">
+<div class="row padding-2 margin-top-7_5 mobile-margin-top-5 padding-bottom-5 width-90 padding-left-5 mobile-padding-top-15 contact_us_con client_row ">
   <% for(var i = 0; i < clients.length; i++){ %>
       <div class="col-3 mobile-col-12 margin-top-2_5" >
     <div class="margin-left-10  margin-top-2_5 relative client_card card padding-bottom-20 mobile-padding-bottom-5 heavy-shadow padding-2" >
