--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1193,6 +1193,9 @@ cursor: auto;
   .mobile-padding-top-15{
     padding-top:15% !important;
   }
+  .mobile-padding-top-25{
+    padding-top:25%;
+  }
   .mobile-padding-top-20{
     padding-top:20% !important;
   }
