--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -1,4 +1,4 @@
-<div class="margin-top-2_5 padding-bottom-5">
+<div class="margin-top-2_5 padding-bottom-5 mobile-margin-top-5">
   <p class="before_after_title text-banner mobile-width-80">Our Work </p>
 
   <div class="row margin-top-5">
