--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -9,7 +9,7 @@
              <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 x_before_box">Before </p>
           </div>
           <div class='col-6 dark-navy-background'>
-            <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 x_after_box">After </p>
+            <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 x_after_box" style="border-bottom: 2px solid #002F57;">After </p>
           </div>
         </div>
       </div>
