--- a/views/layout/contact/meet_the_owners.ejs
+++ b/views/layout/contact/meet_the_owners.ejs
@@ -1,20 +1,22 @@
-<div class="meet_owners_container padding-top-bottom-10">
+<div class="meet_owners_container padding-top-bottom-5">
   <p class="width-50 mobile-width-80 text-banner">Meet the Owners </p>
 
   <div class='row margin-top-5 mobile-margin-top-15'>
-    <div class="col-2"></div>
-    <div class="col-8">
+    <div class="col-1"></div>
+    <div class="col-10">
         <div class='row'>
 
             <div class="col-6 mobile-col-12">
               <img class ="width-100" src = "./assets/images/2.png" />
-              <p class="owner_name akrobat font-30 white text-center">Marco Khodr </p>
+
+              <p class="owner_name margin-top-5 akrobat font-30 white text-center">Marco Khodr </p>
+            </div>
+            <div class="col-6">
+
+
             </div>
 
-            <div class="col-6 mobile-col-12">
-              <img class ="width-100" src = "./assets/images/1.png" />
-              <p class="owner_name akrobat font-30 white text-center ">Tommy Tejada </p>
-            </div>
+
 
         </div>
     </div>
