--- a/views/layout/home/contact.ejs
+++ b/views/layout/home/contact.ejs
@@ -1,7 +1,7 @@
 
     <div class="showboxcontact relative margin-top-10 width-100">
-        <div class="blueboxcontact2 absolute background-006 width-20 z-3"></div>
-        <div class="blueboxcontact2 right-20 background-005"></div>
+        <div class="blueboxcontact2  absolute background-006 width-20 z-3"></div>
+        <div class="blueboxcontact2 margin-top-7_5-neg right-20 background-005"></div>
         <div class="supportbox absolute width-80 z-5 background-c7 mobile-margin-right-10 margin-right-10">
 
             <img class="width-100 z-4 mobile-margin-top-70 showimg" id="showid" src = "./assets/images/show_img_desktop.png"/>
