--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -6,10 +6,10 @@
       <div class="col-10 mobile-col-11">
         <div class="row">
           <div class="col-6 darker-navy-background">
-             <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 x_before_box">Before </p>
+             <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 " style="border-bottom: 2px solid none;">Before </p>
           </div>
           <div class='col-6 dark-navy-background'>
-            <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 x_after_box" style="border-bottom: 2px solid #002F57;">After </p>
+            <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 x_after_box" style="border-bottom: 2px solid none;">After </p>
           </div>
         </div>
       </div>
@@ -26,7 +26,7 @@
                 <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 darker-navy-background padding-5 x_before_box">
                     <img class=" width-100 height-100 relative" src ="<%= images.before %>" />
                 </div>
-                <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 dark-navy-background padding-5 x_after_box" style="border-bottom: 2px solid #002F57;" >
+                <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 dark-navy-background padding-5 x_after_box" style="border-bottom: 2px solid none;" >
                     <img class=" width-100 height-100" src ="<%= images.after %>"  />
                 </div>
             </div>
