--- a/views/layout/about/mission.ejs
+++ b/views/layout/about/mission.ejs
@@ -1,5 +1,5 @@
 <div class="about_container relative padding-bottom-5 padding-top-0 mobile-padding-top-bottom-1">
-    <div class="row">
+    <div class="row mobile-padding-top-bottom-2_5">
         <div class="col-3 mobile-col-1"></div>
         <div class="col-6 mobile-col-10">
             <p class="about_title white text-center font-40 padding-top-5 akrobat"> Our Mission </p>
