--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -16,7 +16,7 @@
 }
 
 .x_after_box{
-  border-bottom:2px solid navy;
+  border-bottom:2px solid #002F57;
 }
 .quotesheet_wrapper{
   margin-top:5%;
