--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -1,35 +1,33 @@
 <div class="work_container relative">
 
 
-      <div class="what_we_do_inner we_clean_inner width-100 padding-top-5 padding-bottom-10">
-        <p class="text-banner white margin-top-5 font-60 mobile-font- mobile-text-center text-left width-40 mobile-width-100 mobile-margin-left-0" style="font-size:60px">     What We Clean </p>
+      <div class="what_we_do_inners we_clean_inners background-whit width-100 padding-top-5 padding-bottom-10">
+        <p class="text-banner white font-60 mobile-font- mobile-text-center text-left width-40 mobile-width-100 mobile-margin-left-0" style="font-size:60px">     What We Clean </p>
 
-        <div class="row mobile-margin-top-5">
-          <div class="col-6 mobile-col-12 padding-bottom-10">
-
-
-
-              <p class="what_we_do_description  text-banner white margin-top-5 mobile-text-center we_clean_descr  font-25 width-50 mobile-width-50 mobile-font-20 mobile-margin-left-25">
-                Window Panes
-              </p>
-
-              <p class="what_we_do_description text-banner white margin-top-5 mobile-text-center we_clean_descr  font-25 width-50 mobile-width-50  mobile-font-20 mobile-margin-left-25">
-                Window Ledges
-              </p>
-
-              <p class="what_we_do_description text-banner white margin-top-5 mobile-text-center we_clean_descr font-25 width-50 mobile-width-50  mobile-font-20 mobile-margin-left-25">
-                Door Frames
-              </p>
-
-              <p class="what_we_do_description text-banner margin-top-5  white mobile-text-center we_clean_descr  font-25 width-50 mobile-width-50  mobile-font-20 mobile-margin-left-25">
-                Window Frames
-              </p>
-
-              <p class="what_we_do_description margin-top-5 white mobile-text-center we_clean_descr text-banner font-25 width-50 mobile-width-50  mobile-font-20 mobile-margin-left-25">
-                Door Bottoms
-              </p>
-
+        <div class="row mobile-margin-top-5 margin-top-5">
+          <div class="col-6 padding-0">
+            <div class="width-100">
+              <img src = "./assets/images/what_we_do_1.png" class="width-100"/>
+              <p class="text-banner width-50 float-left absolute bottom-0 left-0"> Screens</p>
+            </div>
           </div>
-
+          <div class="col-6 padding-0">
+            <div class="width-100">
+              <img src = "./assets/images/what_we_do_2.png" class="width-100"/>
+              <p class="text-banner width-50 float-right absolute bottom-0 right-0"> Window Ledges</p>
+            </div>
+          </div>
+          <div class="col-6 padding-0">
+            <div class="width-100">
+              <img src = "./assets/images/what_we_do_3.png" class="width-100"/>
+              <p class="text-banner width-50 float-left absolute bottom-0 left-0"> Window Panels</p>
+            </div>
+          </div>
+          <div class="col-6 padding-0">
+            <div class="width-100">
+              <img src = "./assets/images/what_we_do_4.png" class="width-100"/>
+              <p class="text-banner width-50 float-right absolute bottom-0 right-0">Window Frames</p>
+            </div>
+          </div>
       </div>
 </div>
