--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -12,6 +12,10 @@
    padding-top:5%;
    padding-bottom:5%;
  }
+ .padding-top-bottom-2_5{
+   padding-top:2.5%;
+   padding-bottom:2.5%;
+ }
  .black{
    color:black
  }
