--- a/views/user/about_us.ejs
+++ b/views/user/about_us.ejs
@@ -14,6 +14,7 @@
     </div>
 
     <%- include("./../layout/about/mission.ejs") %>
+      <%- include("./../layout/about/values.ejs") %>
     <%- include("./../layout/about/what_we_do.ejs") %>
 
 
