--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -2,31 +2,31 @@
 
 
       <div class="what_we_do_inners we_clean_inners background-whit width-100 padding-top-5 padding-bottom-10">
-        <p class="text-banner white font-60 mobile-font- mobile-text-center text-left width-40 mobile-width-100 mobile-margin-left-0 mobile-width-80 font-40" >     What We Clean </p>
+        <p class="text-banner white font-60 mobile-font- mobile-text-left text-left width-40 mobile-width-100 mobile-margin-left-0 mobile-width-60 font-40" >     What We Clean </p>
 
         <div class="row mobile-margin-top-5 margin-top-5">
           <div class="col-6 mobile-col-12 padding-0">
             <div class="width-100">
               <img src = "./assets/images/what_we_do_1.png" class="width-100"/>
-              <p class="text-banner width-50 float-left absolute bottom-0 left-0"> Screens</p>
+              <p class="text-banner width-50 float-left absolute bottom-0 left-0 mobile-font-30"> Screens</p>
             </div>
           </div>
           <div class="col-6 mobile-col-12  padding-0">
             <div class="width-100">
               <img src = "./assets/images/what_we_do_2.png" class="width-100"/>
-              <p class="text-banner width-50 float-right absolute bottom-0 right-0"> Window Ledges</p>
+              <p class="text-banner width-50 float-right absolute bottom-0 right-0 mobile-font-30"> Window Ledges</p>
             </div>
           </div>
           <div class="col-6  mobile-col-12  padding-0">
             <div class="width-100">
               <img src = "./assets/images/what_we_do_3.png" class="width-100"/>
-              <p class="text-banner width-50 float-left absolute bottom-0 left-0"> Window Panels</p>
+              <p class="text-banner width-50 float-left absolute bottom-0 left-0 mobile-font-30"> Window Panels</p>
             </div>
           </div>
           <div class="col-6 mobile-col-12  padding-0">
             <div class="width-100">
               <img src = "./assets/images/what_we_do_4.png" class="width-100"/>
-              <p class="text-banner width-50 mobile-width-80 mobile-font-30 float-right absolute bottom-0 right-0">Window Frames</p>
+              <p class="text-banner width-50 mobile-width-80 mobile-font-30 float-right absolute bottom-0 right-0 mobile-font-30">Window Frames</p>
             </div>
           </div>
       </div>
