--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -8,19 +8,19 @@
           <div class="col-6 mobile-col-12 padding-0">
             <div class="width-100">
               <img src = "./assets/images/what_we_do_1.png" class="width-100"/>
-              <p class="text-banner width-50 float-left absolute bottom-0 left-0 mobile-font-30"> Screens</p>
+              <p class="text-banner mobile-width-80  width-50 float-left absolute bottom-0 left-0 mobile-font-30"> Screens</p>
             </div>
           </div>
           <div class="col-6 mobile-col-12  padding-0">
             <div class="width-100">
               <img src = "./assets/images/what_we_do_2.png" class="width-100"/>
-              <p class="text-banner width-50 float-right absolute bottom-0 right-0 mobile-font-30"> Window Ledges</p>
+              <p class="text-banner mobile-width-80 width-50 float-right absolute bottom-0 right-0 mobile-font-30"> Window Ledges</p>
             </div>
           </div>
           <div class="col-6  mobile-col-12  padding-0">
             <div class="width-100">
               <img src = "./assets/images/what_we_do_3.png" class="width-100"/>
-              <p class="text-banner width-50 float-left absolute bottom-0 left-0 mobile-font-30"> Window Panels</p>
+              <p class="text-banner mobile-width-80 width-50 float-left absolute bottom-0 left-0 mobile-font-30"> Window Panels</p>
             </div>
           </div>
           <div class="col-6 mobile-col-12  padding-0">
