--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -1,8 +1,8 @@
 <div class="work_container relative">
 
 
-      <div class="what_we_do_inners we_clean_inners mobile-padding-top-10 width-100 padding-top-5 padding-bottom-10">
-        <p class="text-banner white font-60 mobile-font-40 mobile-text-center text-left width-40 mobile-margin-left-0 mobile-width-80 " >     What We Clean </p>
+      <div class="what_we_do_inners we_clean_inners mobile-background-white mobile-padding-top-10 width-100 padding-top-5 padding-bottom-10">
+        <p class="text-banner white font-60 mobile-font-40 mobile-text-center  text-left width-40 mobile-margin-left-0 mobile-width-80 " >     What We Clean </p>
 
         <div class="row mobile-margin-top-10 margin-top-5">
           <div class="col-6 mobile-col-12 padding-0">
